[package]
name = "gfx-descriptor"
version = "0.2.0"
authors = [
	"omni-viral <scareaangel@gmail.com>",
	"The Gfx-rs Developers",
]
edition = "2018"
repository = "https://github.com/gfx-rs/gfx-extras"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/gfx-descriptor"
keywords = ["graphics", "gfx-hal"]
categories = ["rendering"]
description = "gfx-hal descriptor allocator"

[dependencies]
arrayvec = "0.5"
fxhash = "0.2"
hal = { package = "gfx-hal", git = "https://github.com/gfx-rs/gfx.git", rev = "c9fcd08956eeddac8f6d85b02794fc5e3d1717f5" }
log = "0.4"
